force-app/main/default/objects/Price_List__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Country</label>
    <referenceTo>Currency_Engagement_Type__c</referenceTo>
    <relationshipName>Rate_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>