force-app/main/default/objects/Price_List__c/fields/Our_Cost__c.field-meta.xml
<CustomField>
    <fullName>Our_Cost__c</fullName>
    <inlineHelpText>Our Cost to Resource Per Hour</inlineHelpText>
    <label>Our CTR/Hr</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>