force-app/main/default/objects/Price_List__c/fields/Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Rate__c</fullName>
    <label>Proposed Rate/Hr</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>