force-app/main/default/objects/Price_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Proposed_Rate__c</columns>
    <columns>Billing_Country__c</columns>
    <columns>Our_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>